[gd_scene load_steps=2 format=3 uid="uid://c46oc0gkqwsn2"]

[ext_resource type="Script" path="res://main.gd" id="1_1tqwi"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1tqwi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -61.0
offset_right = 97.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="Button1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Button String"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Button Param"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Button Signal"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Button Signal Argument"

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Button Signal Param"

[connection signal="pressed" from="VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button5" to="." method="_on_button_5_pressed"]
